--- a/_posts/2017-4-28-可选.md
+++ b/_posts/2017-4-28-可选.md
@@ -1,13 +1,13 @@
 ---
-title: 茶壶（可选）
+title: 透明物体的opengl绘制（可选）
 tag: 计算机图形学
 categories: 计算机图形学 openGL
 ---
 
 /*
-teapot的实验代码在github的teapot项目中，欢迎下载。
+透明物体的opengl绘制的实验代码在github的transparent项目中，欢迎下载。
 */
 
-本实验是可选做的，因为很多例子中都出现过茶壶模型，所以我在选做实验中绘制了这个出现率很高的茶壶。  
+本实验是可选做的，因为刚好上课时学到了透明物体的绘制，所以我在选做实验中绘制了一个简单的透明物体形成的场景。  
 实验结果截图：  
-![Markdown](http://i1.buimg.com/591351/2e9f952e89eb78fd.png)
+![Markdown](http://i4.piimg.com/591351/0f477219686d1146.png)
